fixed the questions overlapping problem
John and I fixed the problem in the Mixed Evaluations where parts
of the questions were overlapping and covering up another question's
information.  We fixed it by getting rid of the fixed height and width.

We also added padding to make it a bit nicer.

--- a/app/webroot/css/ipeer.css
+++ b/app/webroot/css/ipeer.css
@@ -1045,7 +1045,6 @@ table.content-table {
 
 
 .question {
-  height: 170px;
   margin: 0.8em 0 0.8em 0;
   overflow: visible;
   position: relative;
@@ -1054,17 +1053,11 @@ table.content-table {
 .question-tab {
   float: left;
   color: white;
-  width: 25px;
-  height: 100%;
   border: 0px solid red;
   background-color: #4478AC;
   text-align: center;
   cursor: move;
-}
-
-.question-tab span {
-  padding: 3px 0 0 0;
-  display: block;
+  padding: 0.3em
 }
 
 .question-content {
